2005-01-28  Marcus Brinkmann  <marcus@gnu.org>

	* gcc-3.4.3-i686-gnu.dpatch: New file.
	* Makefile.am (EXTRA_DIST): Add gcc-3.4.3-i686-gnu.dpatch.

2005-01-27  Marcus Brinkmann  <marcus@gnu.org>

	* hurd-l4/sysdeps/l4/hurd/i386: New directory.
	* hurd-l4/sysdeps/l4/hurd/i386/static-start.S: New file.
	* hurd-l4/sysdeps/l4/hurd/i386/init-first.c: New file.
	* hurd-l4/sysdeps/l4/hurd/init-first.c: Removed.
	* hurd-l4/sysdeps/l4/hurd/enbl-secure.c: New file.
	* hurd-l4/sysdeps/l4/hurd/brk.c: New file.
	* hurd-l4/sysdeps/l4/hurd/Makeconf: New file.
	* hurd-l4/sysdeps/l4/hurd/Makefile [$(subdir) eq csu]:
	(crt0): New target.
	(extra-objs): Add static-start.o.

	* patches/51-nptl-hurd-l4-tls.patch: New file.
	
	* patches/08-sysdeps-generic-dl-sysdep.patch: New file.

	* hurd-l4/sysdeps/l4/hurd/getpagesize.c: Removed.
	* hurd-l4/sysdeps/l4/getpagesize.c: New file.

	* hurd-l4/sysdeps/l4/hurd/sigaction.c: New dummy file to prevent
	including recursive dependencies from the BSD implementation.
	* hurd-l4/sysdeps/l4/hurd/sigprocmask.c: Likewise.

2005-01-23  Marcus Brinkmann  <marcus@gnu.org>

	* Initial check-in.
